@startuml
title 23. UML - Facade trong Checkout

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 12
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  FontSize 14
  FontStyle bold
}

class CartController {
}

class CheckoutFacade <<Facade>> {
}

class ShippingFeeCalculator <<Subsystem>> {
}

class PaymentMethodFactory <<Subsystem>> {
}

class OrderBuilder <<Subsystem>> {
}

CartController --> CheckoutFacade
CheckoutFacade --> ShippingFeeCalculator
CheckoutFacade --> PaymentMethodFactory
CheckoutFacade --> OrderBuilder

@enduml
